# NetSentinel

./: .gitignore  README.md  REFACTORING_SUMMARY.md  package.json  tauri.conf.json
app/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  README.md  types.ts
app/src-tauri/src/: main.rs
app/src/components/: Layout.tsx  LiveWaveChart.tsx  RuleEditor.tsx  Sidebar.tsx  TopBar.tsx  ui.tsx
app/src/hooks/: index.ts  useProcessMonitor.ts  useRuleEngine.ts  useSystemSettings.ts  useTrafficWave.ts
app/src/styles/: index.css
app/src/views/: Dashboard.tsx  ProcessMonitor.tsx  RuleEngine.tsx  Settings.tsx
core/: Cargo.toml
core/src/: config.rs  ipc.rs  main.rs  process.rs  rules.rs  wfp.rs  wfp_native.rs
core/tests/: integration_tests.rs
docs/: IMPLEMENTATION_SUMMARY.md  IPC_COMMAND_EXTENSION_REPORT.md  IPC_INTEGRATION_COMPLETE.md  IPC_INTEGRATION_GUIDE.md  PROCESS_MONITOR_INTEGRATION.md  RUST_CORE_IMPLEMENTATION.md  SETUP_GUIDE.md  UI_COMPONENTS_REPORT.md  WFP_IMPLEMENTATION_REPORT.md  WFP_NATIVE_IMPLEMENTATION.md
