[package]
name = "netsentinel-core"
version = "2.0.0"
edition = "2021"
authors = ["System Architect"]
description = "Kernel-level home network privacy defense core service"
license = "MIT"

[dependencies]
# Windows API - Full support for process and network operations
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
]}

# Windows API legacy support (for winapi in process.rs)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "handleapi",
    "winnt",
    "tlhelp32",
]}

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# IPC (Inter-Process Communication)
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

# Configuration
config = "0.14"

# HMAC for IPC security
hmac = "0.12"
sha2 = "0.10"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Random number generation for filter IDs
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "netsentinel-core"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
