[package]
name = "netsentinel-core-bridge"
version = "2.0.0"
description = "NetSentinel Tauri Core Bridge - IPC layer between UI and Rust core service"
authors = ["System Architect"]
license = "MIT"
repository = "https://github.com/netsentinel/netsentinel"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "fs-all",
  "path-all",
  "process-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Local core module (will be linked to /workspace/core)
# netsentinel-core = { path = "../../core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
